@@ -1,3 +1,9 @@
+2003-09-25  Darin Adler  <darin@apple.com>
+
+        - rolled out change to fix 3390850 because it caused a performance regression
+
+        * khtml/misc/decoder.cpp: (Decoder::decode): Rolled out change.
+
 2003-09-25  Ken Kocienda  <kocienda@apple.com>
 
         Reviewed by Dave
